# astra-toolbox

./: astra_vc14.vcxproj  astra_vc14.vcxproj.filters
cuda/2d/: util.cu  util.h
cuda/3d/: algo3d.cu  astra3d.cu  astra3d.h  cgls3d.cu  cone_cyl_bp.cu  cone_fp.cu  cone_line.cu  cone_line.h  dims3d.h  mem3d.cu  mem3d.h  psf3d.cu  psf3d.h  sirt3d.cu  util3d.cu
include/astra/: Config.h  (+22 more)
python/: pyproject.toml  setup.py
python/astra/: PyIncludes.pxd  __init__.py  algorithm.py  algorithm_c.pyx  creators.py  data2d.py  data2d_c.pyx  data3d.py  data3d_c.pyx  experimental.pyx  log_c.pyx  projector.py  projector3d_c.pyx  projector_c.pyx  pythonutils.py  utils.pxd  utils.pyx
python/astra/src/: PythonPluginAlgorithm.cpp
python/conda/linux_release/buildenv/: build.sh
python/pypi/: MANIFEST.in  howtobuild.sh  setup.py
src/: CompositeGeometryManager.cpp  ConeProjectionGeometry3D.cpp  ConeVecProjectionGeometry3D.cpp  CudaCglsAlgorithm3D.cpp  CudaForwardProjectionAlgorithm.cpp  CudaProjector3D.cpp  CudaReconstructionAlgorithm2D.cpp  CudaSirtAlgorithm3D.cpp  FanFlatProjectionGeometry2D.cpp  FanFlatVecProjectionGeometry2D.cpp  FilteredBackProjectionAlgorithm.cpp  Float32Data3D.cpp  Float32Data3DMemory.cpp  Float32ProjectionData3DMemory.cpp  Float32VolumeData3DMemory.cpp  GeometryUtil3D.cpp  Logging.cpp  ParallelProjectionGeometry2D.cpp  ParallelProjectionGeometry3D.cpp  ParallelVecProjectionGeometry2D.cpp  ParallelVecProjectionGeometry3D.cpp  SartAlgorithm.cpp  SparseMatrixProjectionGeometry2D.cpp  Utilities.cpp  VolumeGeometry2D.cpp  VolumeGeometry3D.cpp  XMLConfig.cpp
(+8 files in other folders)
