# TODO: Move more metadata here from setup.py

[build-system]
requires = ["setuptools", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.astra.nocuda]
cuda = false

[tool.astra.cuda]
cuda = true

[tool.astra.linux_module]
extra_lib = [ 'libastra.so*' ]
cuda = false

[tool.astra.linux_module_cuda]
extra_lib = [ 'libastra.so*' ]
cuda = true

[tool.astra.windows_cuda]
extra_lib = [ 'AstraCuda64.dll', 'cudart64_12.dll', 'cufft64_11.dll' ]
cuda = true

[tool.astra.pypi_linux_cuda]
install_requires = ['nvidia-cuda-runtime-cu12==12.1.105', 'nvidia-cufft-cu12==11.0.2.54']
extra_lib = [ 'libastra.so*' ]
cuda = true

[tool.astra.conda_cuda]
cuda = true
